--- a/First_Draft/html/dashboard.html
+++ b/First_Draft/html/dashboard.html
@@ -18,6 +18,8 @@
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <!-- Scripts -->
+    <script src="scripts/controller.js"></script>
 </head>
 
 <body>
