--- a/First_Draft/html/devices-table.html
+++ b/First_Draft/html/devices-table.html
@@ -19,7 +19,9 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
     <!-- Scripts -->
-    <script src="scripts/controller.js"></script>
+    <script src="../<script src="../scripts/controller.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>scripts/controller.js"></script>
 </head>
 
 <body>
