--- a/First_Draft/html/dashboard.html
+++ b/First_Draft/html/dashboard.html
@@ -19,14 +19,15 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
     <!-- Scripts -->
-    <script src="../scripts/controller.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="../scripts/controller.js"></script>
+    
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-color="blue" data-image="../assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
@@ -69,7 +70,7 @@
                     
                     <!-- Nic Profiles Table -->
                     <li>
-                        <a id="nicprof_button" href="./nic-profiles-table.html">
+                        <a href="./nic-profiles-table.html" >
                             <i class="material-icons">content_paste</i>
                             <p>Nic Profiles</p>
                         </a>
