--- a/Cisco_UI/html/dashboard.html
+++ b/Cisco_UI/html/dashboard.html
@@ -3,22 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Dashboard Example</title>
-        <link rel="stylesheet" href="css/cui-standard.min.css">
+        <link rel="stylesheet" href="../css/cui-standard.min.css">
     </head>
     <body class="cui">
         <div class="content-fluid">
             <div class="sidebar" >
                 <div class="sidebar__header">
-                    <div class="sidebar__header-title">John Smith</div>
+                    <div class="sidebar__header-title">Rest Server</div>
                 </div>
                 <ul>
-                    <li class="sidebar__item"><a href="">Conversations</a></li>
-                    <li class="sidebar__item"><a href="">Favorite Conversations</a></li>
-                    <li class="sidebar__item"><a href="">Contacts</a></li>
-                    <li class="sidebar__item"><a href="">Favorite Contacts</a></li>
-                    <li class="sidebar__item"><a href="">Settings</a></li>
-                    <li class="sidebar__item"><a href="">Feedback</a></li>
-                    <li class="sidebar__item"><a href="">Unlink Device</a></li>
+                    <li class="sidebar__item"><a href="">External Devices</a></li>
+                    <li class="sidebar__item"><a href="">Nic Profiles</a></li>
+                    <li class="sidebar__item"><a href="">Domains</a></li>
+                    <li class="sidebar__item"><a href=""></a></li>
+                    <li class="sidebar__item"><a href="">System Information</a></li>
                 </ul>
             </div>
             <main>
