--- a/Cisco_UI/html/nic_profiles.html
+++ b/Cisco_UI/html/nic_profiles.html
@@ -38,7 +38,7 @@
                                 </ul>
                             </div> -->
                             <div class="header-heading">
-                                <h1 class="page-title">Dashboard</h1>
+                                <h1 class="page-title">Nic Profiles</h1>
                             </div>
                         </div>
                         <div class="header-toolbar">
@@ -49,7 +49,7 @@
                                 <span class="icon-alert"></span>
                             </a>
                             <a class="btn btn--small btn--icon">
-                                <span class="icon-cog"></span>
+                                <span class="icon-outbox" ></span>
                             </a>
                         </div>
                     </div>
