--- a/Cisco_UI/html/uplink_profiles.html
+++ b/Cisco_UI/html/uplink_profiles.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <title>Rest Server Dashboard</title>
         <link rel="stylesheet" href="../css/cui-standard.min.css">
+        <!-- Scripts -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="../scripts/controller.js"></script>
     </head>
     <body class="cui">
         <div class="content-fluid">
