Device Name being passed around in local storgae

--- a/Cisco_UI/html/domains.html
+++ b/Cisco_UI/html/domains.html
@@ -8,6 +8,9 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="../scripts/controller.js"></script>
+        <script type="text/javascript">
+            domainsGetRequest();
+        </script>
     </head>
     <body class="cui">
         <div class="content-fluid">
@@ -64,7 +67,31 @@
                             <h1>Dashboard with Sidebar</h1>
                             <p>Requires the Standard Package</p>
                         </div>
-                        <p> We are in domains </p>
+                        <!-- Domains Table 
+                        1. JS needs to process data and append rows to this table. 
+                        -->
+                        <!-- <div class="col-md-12"> -->
+                            <table id="nicprofiles_table" class="table table--bordered table--highlight">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            <label class="checkbox">
+                                                <input type="checkbox"/>
+                                                <span class="checkbox__input"></span>
+                                            </label>
+                                        </th>
+                                        <th class="sortable">ID<span class="sort-indicator icon-chevron-down"></span></th>
+                                        <th>Name</th>
+                                        <th>Domains</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Rows will be constructed by the JS Function -->
+                                </tbody>
+                            </table>
+                        <!-- </div> -->
+                        <!-- Dumping Pretty Printing the nic profile data from GET API-->
+                        <p class="nic-result"></p>
                     </div>
                 </div>
                 <footer class="footer footer--new">
