--- a/Cisco_UI/html/nic_profiles.html
+++ b/Cisco_UI/html/nic_profiles.html
@@ -9,7 +9,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="../scripts/controller.js"></script>
         <script type="text/javascript">
-            nicProfileGetRequest();
+            console.log("localStorage"+localStorage);
+            nicProfileGetRequest(localStorage.getItem('devicename'));
         </script>
     </head>
     <body class="cui">
