--- a/Cisco_UI/html/uplink_profiles.html
+++ b/Cisco_UI/html/uplink_profiles.html
@@ -8,6 +8,11 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="../scripts/controller.js"></script>
+        <script type="text/javascript">
+            console.log("localStorage"+localStorage);
+            uplinkProfGetRequest(localStorage.getItem('devicename'));
+        </script>
+
     </head>
     <body class="cui">
         <div class="content-fluid">
