domains complete, need to link tables

--- a/Cisco_UI/html/domains.html
+++ b/Cisco_UI/html/domains.html
@@ -77,9 +77,10 @@
                                             <span class="checkbox__input"></span>
                                         </label>
                                     </th>
-                                    <th class="sortable">ID<span class="sort-indicator icon-chevron-down"></span></th>
+                                    <th class="sortable">Domain Id<span class="sort-indicator icon-chevron-down"></span></th>
                                     <th>Name</th>
-                                    <th>Domains</th>
+                                    <th>Type</th>
+                                    <th>Number of Encaps</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -105,7 +106,9 @@
                                     </th>
                                     <th class="sortable">ID<span class="sort-indicator icon-chevron-down"></span></th>
                                     <th>Name</th>
-                                    <th>Domains</th>
+                                    <th>Type</th>
+                                    <th>vxlan</th>
+                                    <th>pvlanconfig</th>
                                 </tr>
                             </thead>
                             <tbody>
