--- a/Cisco_UI/html/dashboard.html
+++ b/Cisco_UI/html/dashboard.html
@@ -69,28 +69,7 @@
                             <h1>Dashboard with Sidebar</h1>
                             <p>Requires the Standard Package</p>
                         </div>
-                        <div class="row base-margin-top">
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 1</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 2</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 3</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 4</h4>
-                                <p>Description</p>
-                            </div>
-                        </div>
+                        <p> show some stats here </p>
                     </div>
                 </div>
                 <footer class="footer footer--new">
