--- a/Cisco_UI/html/dashboard.html
+++ b/Cisco_UI/html/dashboard.html
@@ -26,7 +26,7 @@
                     <li class="sidebar__item"><a href="nic_profiles.html">Nic Profiles</a></li>
                     <li class="sidebar__item"><a href="domains.html">Domains</a></li>
                     <li class="sidebar__item"><a href="uplink_profiles.html">Uplink Profiles</a></li>
-                    <li class="sidebar__item"><a href="system_information.html">System Information</a></li>
+                    <li class="sidebar__item"><a href="system_info.html">System Information</a></li>
                 </ul>
             </div>
             <main>
