--- a/Cisco_UI/html/system_info.html
+++ b/Cisco_UI/html/system_info.html
@@ -46,7 +46,7 @@
                                 </ul>
                             </div> -->
                             <div class="header-heading">
-                                <h1 class="page-title">Dashboard</h1>
+                                <h1 class="page-title">System Information</h1>
                             </div>
                         </div>
                         <div class="header-toolbar">
@@ -65,31 +65,21 @@
                 <div class="content">
                     <div class="container">
                         <div class="section">
-                            <h1>Dashboard with Sidebar</h1>
-                            <p>Requires the Standard Package</p>
+                            <h1>System Information</h1>
+                            <p>TBD Some information about the system. </p>
                         </div>
-                        <div class="row base-margin-top">
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 1</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 2</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 3</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 4</h4>
-                                <p>Description</p>
-                            </div>
+                        <div class="col-md-4">
+                            <table id="sysinfo_table" class="table table--bordered table--highlight">
+                                </thead>
+                                <tbody>
+                                    <!-- Rows will be constructed by the JS Function -->
+                                </tbody>
+                            </table>
                         </div>
+                        <!-- </div> -->
+                        <!-- Dumping Pretty Printing the domains data from GET API -->
+                        <p class="sysinfo-result"></p>
+                        
                     </div>
                 </div>
                 <footer class="footer footer--new">
