--- a/Cisco_UI/html/uplink_profiles.html
+++ b/Cisco_UI/html/uplink_profiles.html
@@ -47,7 +47,7 @@
                                 </ul>
                             </div> -->
                             <div class="header-heading">
-                                <h1 class="page-title">Dashboard</h1>
+                                <h1 class="page-title">Uplink Profiles</h1>
                             </div>
                         </div>
                         <div class="header-toolbar">
@@ -66,31 +66,30 @@
                 <div class="content">
                     <div class="container">
                         <div class="section">
-                            <h1>Dashboard with Sidebar</h1>
-                            <p>Requires the Standard Package</p>
+                            <h1>Uplink Profiles</h1>
+                            <p>TBD information about what Uplink Profiles are and their purpose in this application.</p>
                         </div>
-                        <div class="row base-margin-top">
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 1</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 2</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 3</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 4</h4>
-                                <p>Description</p>
-                            </div>
-                        </div>
+                        <table id="uplinkprof_table" class="table table--bordered table--highlight">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        <label class="checkbox">
+                                            <input type="checkbox"/>
+                                            <span class="checkbox__input"></span>
+                                        </label>
+                                    </th>
+                                    <th class="sortable">Uplink Profile Id<span class="sort-indicator icon-chevron-down"></span></th>
+                                    <th>Name</th>
+                                    <th>DomainRefIds</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Rows will be constructed by the JS Function -->
+                            </tbody>
+                        </table>
+                        <!-- </div> -->
+                        <!-- Dumping Pretty Printing the domains data from GET API -->
+                        <p class="uplinkprofs-result"></p>
                     </div>
                 </div>
                 <footer class="footer footer--new">
@@ -112,7 +111,7 @@
                             </a>
                         </div>
                         <div class="footer__copyright">
-                            <div>Copyright &copy; 2017 Cisco Systems Inc.</div>
+                            <div>Copyright &copy; 2018 Cisco Systems Inc.</div>
                             <div>All rights reserved.</div>
                         </div>
                     </div>
