--- a/Cisco_UI/html/dashboard.html
+++ b/Cisco_UI/html/dashboard.html
@@ -27,6 +27,7 @@
                     <li class="sidebar__item"><a href="domains.html">Domains</a></li>
                     <li class="sidebar__item"><a href="uplink_profiles.html">Uplink Profiles</a></li>
                     <li class="sidebar__item"><a href="system_info.html">System Information</a></li>
+                    <li class="sidebar__item"><a href="../orig_standard.html">UI Kit Template</a></li>
                 </ul>
             </div>
             <main>
