--- a/Cisco_UI/html/device_management.html
+++ b/Cisco_UI/html/device_management.html
@@ -8,6 +8,10 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="../scripts/controller.js"></script>
+        <script type="text/javascript">
+            console.log("localStorage"+localStorage);
+            devicesGetRequest();
+        </script>
     </head>
     <body class="cui">
         <div class="content-fluid">
@@ -21,7 +25,7 @@
                     <li class="sidebar__item"><a href="nic_profiles.html">Nic Profiles</a></li>
                     <li class="sidebar__item"><a href="domains.html">Domains</a></li>
                     <li class="sidebar__item"><a href="uplink_profiles.html">Uplink Profiles</a></li>
-                    <li class="sidebar__item"><a href="system_information.html">System Information</a></li>
+                    <li class="sidebar__item"><a href="system_info.html">System Information</a></li>
                 </ul>
             </div>
             <main>
@@ -42,7 +46,7 @@
                                 </ul>
                             </div> -->
                             <div class="header-heading">
-                                <h1 class="page-title">Dashboard</h1>
+                                <h1 class="page-title">Devices</h1>
                             </div>
                         </div>
                         <div class="header-toolbar">
@@ -61,30 +65,32 @@
                 <div class="content">
                     <div class="container">
                         <div class="section">
-                            <h1>Dashboard with Sidebar</h1>
-                            <p>Requires the Standard Package</p>
+                            <h1>Devices</h1>
+                            <p>This is the Devices Table. We shall perform add/delete operations on it. </p>
                         </div>
-                        <div class="row base-margin-top">
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 1</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 2</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 3</h4>
-                                <p>Description</p>
-                            </div>
-                            <div class="col-md-3 text-center">
-                                <img class="thumb thumb--huge thumb--reflected" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==">
-                                <h4 class="text-bold base-margin-top">Label 4</h4>
-                                <p>Description</p>
-                            </div>
+                        <div class="col-md-4">
+                            <table id="devices_table" class="table table--bordered table--highlight">
+                                <thead>
+                                    <tr>
+                                        <th>
+                                            <label class="checkbox">
+                                                <input type="checkbox"/>
+                                                <span class="checkbox__input"></span>
+                                            </label>
+                                        </th>
+                                        <th class="sortable">Domain Name<span class="sort-indicator icon-chevron-down"></span></th>
+                                        <th>IP Address</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Rows will be constructed by the JS Function -->
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="section">
+                            <!-- Add/Delete Buttons will come here -->
+                            <button class="btn btn--blue-ghost push-4">Add Device</button>
+                            <button class="btn btn--blue-ghost pull-5">Delete Device</button>
                         </div>
                     </div>
                 </div>
