--- a/Cisco_UI/html/domains.html
+++ b/Cisco_UI/html/domains.html
@@ -25,7 +25,8 @@
                     <li class="sidebar__item"><a href="nic_profiles.html">Nic Profiles</a></li>
                     <li class="sidebar__item"><a href="domains.html">Domains</a></li>
                     <li class="sidebar__item"><a href="uplink_profiles.html">Uplink Profiles</a></li>
-                    <li class="sidebar__item"><a href="system_information.html">System Information</a></li>
+                    <li class="sidebar__item"><a href="system_info.html">System Information</a></li>
+                    <li class="sidebar__item"><a href="../orig_standard.html">UI Kit Template</a></li>
                 </ul>
             </div>
             <main>
