Device name, ip added to local storage

--- a/Cisco_UI/html/device_management.html
+++ b/Cisco_UI/html/device_management.html
@@ -103,13 +103,14 @@
                         <div id="addDevice_modal" title="Add a Device">
                             <p>Device Name: </p><input type="text" id="newDevName" placeholder="Device Name" required="required"/>
                             <p>Device IP: </p><input type="text" id="newDevIP" placeholder="Device IP" required="required" />
+                            <hr>
                             <button type="submit" id="addDev_submit" class="btn btn-primary btn-block btn-small">Add Device</button>
                         </div>
 
                         <div id="delDevice_modal" title="Dialog Title">
                             <p> Are you sure you want to delete? </p>
                             <button type="submit" id="delDev_submit" class="btn-small">YES</button>
-                            <button type="submit" id="cancelDelDev_submit" class="btn-small">CANCEL</button>
+                            <button type="submit" id="delDev_cancel" class="btn-small">CANCEL</button>
                         </div>
 
                     </div>
