--- a/Cisco_UI/html/nic_profiles.html
+++ b/Cisco_UI/html/nic_profiles.html
@@ -7,6 +7,8 @@
         <!-- Scripts -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="../scripts/controller.js"></script>
         <script type="text/javascript">
             console.log("localStorage"+localStorage);
