checkbox event invoked

--- a/Cisco_UI/html/device_management.html
+++ b/Cisco_UI/html/device_management.html
@@ -77,14 +77,14 @@
                         <div class="col-md-4">
                             <table id="devices_table" class="table table--bordered table--highlight">
                                 <thead>
-                                    <tr>
+                                    <tr >
                                         <th>
                                             <label class="checkbox">
                                                 <input type="checkbox"/>
                                                 <span class="checkbox__input"></span>
                                             </label>
                                         </th>
-                                        <th class="sortable">Domain Name<span class="sort-indicator icon-chevron-down"></span></th>
+                                        <th class="sortable">Device Name<span class="sort-indicator icon-chevron-down"></span></th>
                                         <th>IP Address</th>
                                     </tr>
                                 </thead>
@@ -108,7 +108,7 @@
                         </div>
 
                         <div id="delDevice_modal" title="Dialog Title">
-                            <p> Are you sure you want to delete? </p>
+                            <p> Are you sure you want to delete this device?</p>
                             <button type="submit" id="delDev_submit" class="btn-small">YES</button>
                             <button type="submit" id="delDev_cancel" class="btn-small">CANCEL</button>
                         </div>
