Device Connect Button added

--- a/Cisco_UI/html/device_management.html
+++ b/Cisco_UI/html/device_management.html
@@ -79,9 +79,9 @@
                                 <thead>
                                     <tr >
                                         <th>
-                                            <label class="checkbox">
-                                                <input type="checkbox"/>
-                                                <span class="checkbox__input"></span>
+                                            <label class="radio">
+                                                <input type="radio"/>
+                                                <span class="radio__input"></span>
                                             </label>
                                         </th>
                                         <th class="sortable">Device Name<span class="sort-indicator icon-chevron-down"></span></th>
@@ -97,6 +97,7 @@
                             <!-- Add/Delete Buttons will come here -->
                             <button id="add_device" class="btn btn--blue-ghost push-4">Add Device</button>
                             <button id="del_device" class="btn btn--blue-ghost pull-5">Delete Device</button>
+                            <button id="del_device" class="btn btn--blue-ghost pull-5">Connect</button>
                         </div>
                         
                         <!-- Add Device pop-up. Hidden by default -->
