--- a/Cisco_UI/html/dashboard.html
+++ b/Cisco_UI/html/dashboard.html
@@ -31,6 +31,18 @@
                     <li class="sidebar__item"><a href="system_info.html">System Information</a></li>
                     <li class="sidebar__item"><a href="../orig_standard.html">UI Kit Template</a></li>
                 </ul>
+                <div class="sidebar__header">
+                    <div class="sidebar__header-title">External Devices</div>
+                </div>
+                <ul>
+                    <li class="sidebar__item"><a href="dashboard.html">Dashboard</a></li>
+                    <li class="sidebar__item"><a href="device_management.html">Device Management</a></li>
+                    <li class="sidebar__item"><a href="nic_profiles.html">Nic Profiles</a></li>
+                    <li class="sidebar__item"><a href="domains.html">Domains</a></li>
+                    <li class="sidebar__item"><a href="uplink_profiles.html">Uplink Profiles</a></li>
+                    <li class="sidebar__item"><a href="system_info.html">System Information</a></li>
+                    <li class="sidebar__item"><a href="../orig_standard.html">UI Kit Template</a></li>
+                </ul>
             </div>
             <main>
                 <header class="header">
